updates from print work with campmatters

--- a/layoutform/templates/layoutform/form.html
+++ b/layoutform/templates/layoutform/form.html
@@ -1,3 +1,4 @@
+{# I don't think this is used anymore. It works, but it's slow. #}
 {% load layoutform %}
 {% if form.errors %}
     <div class="alert alert-danger">
